--- a/hotel.html
+++ b/hotel.html
@@ -88,7 +88,8 @@
             <div class="hotels__info">
               <a class="hotels__title" href="#">Amara Resort & Spa</a>
               <div class="hotels__desc">
-                <p class="hotels__type">Гостиница &emsp;&emsp; от 4000 Р.</p>
+                <p class="hotels__type">Гостиница</p>
+                <p class="hotels__price">от 4000 p.</p>
               </div>
               <div class="hotels__buttons">
                 <a href="detail.html" class="detail">Подробнее</a>
@@ -109,7 +110,8 @@
             <div class="hotels__info">
               <a class="hotels__title" href="#">Desert Quail inn</a>
               <div class="hotels__desc">
-                <p class="hotels__type">Мотель &emsp;&emsp; от 3000 Р.</p>
+                <p class="hotels__type">Мотель</p>
+                <p class="hotels__price">от 3000 Р.</p>
               </div>
               <div class="hotels__buttons">
                 <a href="detail.html" class="detail">Подробнее</a>
@@ -130,7 +132,8 @@
             <div class="hotels__info">
               <a class="hotels__title" href="#">Villas At Poco Diabolo</a>
               <div class="hotels__desc">
-                <p class="hotels__type">Апартаменты &emsp;&emsp; от 2000 Р.</p>
+                <p class="hotels__type">Апартаменты</p>
+                <p class="hotels__price">от 2000 Р.</p>
               </div>
               <div class="hotels__buttons">
                 <a href="detail.html" class="detail">Подробнее</a>
