--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
         <a href="hotel.html" class="scan">Поиск гостиницы в Седоне</a>
         <form action="https://echo.htmlacademy.ru" class="map__form outline" method="post">
           <p class="map__item">
-            <label for="arrival__date">
+            <label for="arrival__date" class="map__item-arrival__date outline">
               Дата заезда:
             </label>
-            <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017"
+              <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017"
               class="map__item__option outline">
             <button type="button" title="Поле для выбора">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
@@ -123,8 +123,8 @@
             </button>
           </p>
           <p class="map__item">
-            <label for="departure__date">Дата выезда:</label>
-            <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017"
+            <label for="departure__date" class="map__item-departure__date outline">Дата выезда:</label>
+              <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017"
               class="map__item__option outline">
             <button type="button" title="Поле для выбора">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
@@ -152,8 +152,8 @@
               </svg>
             </button>
           </p>
-          <p class="map__item child outline">
-            <label for="children">
+          <p class="map__item outline">
+            <label for="children" class="map__item-child">
               Дети:
             </label>
             <button type="button" title="Минус">
