--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               </svg>
             </button>
             <input id="grown" type="text" name="grown" placeholder="2" class="number">
-            <button type="button" title="Плюс" class="map__item__button" class="plus">
+            <button type="button" title="Плюс" class="map__item__button plus">
               <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
                 <path fill="#cacaca" d="M0 4h11v3H0z"></path>
                 <path transform="matrix(0 -1 1 0 0 11)" class="st0" fill="#cacaca" d="M0 4h11v3H0z"></path>
@@ -160,7 +160,7 @@
               </svg>
             </button>
             <input id="children" type="text" name="children" placeholder="0" class="number">
-            <button type="button" title="Плюс" class="map__item__button" class="plus">
+            <button type="button" title="Плюс" class="map__item__button plus">
               <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
                 <path fill="#cacaca" d="M0 4h11v3H0z"></path>
                 <path transform="matrix(0 -1 1 0 0 11)" class="st0" fill="#cacaca" d="M0 4h11v3H0z"></path>
