--- a/hotel.html
+++ b/hotel.html
@@ -97,10 +97,7 @@
               </div>
             </div>
             <div class="hotels__rate">
-              <span class="hotels__rate-star star-4">
-                <div class="stars stars-4">
-                  <p class="visually-hidden">Четыре звезды</p>
-                </div>
+              <span class="hotels__rate-star star-4" title="Четыре звезды">
               </span>
               <p class="hotels__rate-text">Рейтинг: 8,5</p>
             </div>
@@ -121,8 +118,7 @@
               </div>
             </div>
             <div class="hotels__rate">
-              <span class="hotels__rate-star star-3">
-                  <p class="visually-hidden">Три звезды</p>
+              <span class="hotels__rate-star star-3" title="Три звезды">
               </span>
               <p class="hotels__rate-text">Рейтинг: 8,9</p>
             </div>
@@ -143,8 +139,8 @@
               </div>
             </div>
             <div class="hotels__rate">
-              <span class="hotels__rate-star star-2">
-                <p class="visually-hidden">Две звезды</p></span>
+              <span class="hotels__rate-star star-2" title="Две звезды">
+              </span>
               <p class="hotels__rate-text">Рейтинг: 9,2</p>
             </div>
           </li>
