Добавил размер изображению

--- a/hotel.html
+++ b/hotel.html
@@ -125,7 +125,7 @@
           </li>
           <li class="hotels__item">
             <div class="hotels__image">
-              <img src="img/hotel-picture3.png" alt="Villas At Poco Diabolo">
+              <img src="img/hotel-picture3.png" width="135" height="90" alt="Villas At Poco Diabolo">
             </div>
             <div class="hotels__info">
               <a class="hotels__title" href="#">Villas At Poco Diabolo</a>
