--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Главная</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -81,19 +81,19 @@
         <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="main-comfort-item">
           <li class="">
-            <h3 class="main-comfort-item__title">Небольшая<br> площадь
+            <h3 class="main-comfort-item__title">Небольшая площадь
             </h3>
             <p class="main-comfort-item__number">— №3 —</p>
             <p class="main-comfort-item__text">все достопримечательности находятся очень близко</p>
           </li>
           <li class="">
-            <h3 class="main-comfort-item__title">Красивая<br> дорога
+            <h3 class="main-comfort-item__title">Красивая дорога
             </h3>
             <p class="main-comfort-item__number">— №4 —</p>
             <p class="main-comfort-item__text">Ехать в седонну из лас-вегаса совсем не скучно</p>
           </li>
           <li class="">
-            <h3 class="main-comfort-item__title">Мало<br> туристов
+            <h3 class="main-comfort-item__title">Мало туристов
             </h3>
             <p class="main-comfort-item__number">— №5 —</p>
             <p class="main-comfort-item__text">Большинство едет в гранд каньон и толпится там</p>
@@ -106,69 +106,71 @@
         <p class="map__desc">Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
         <a href="hotel.html" class="scan">Поиск гостиницы в Седоне</a>
-        <form action="https://echo.htmlacademy.ru" class="map__form" method="post">
-          <p class="map__item">
-            <label for="arrival__date" class="map__item-residence">Дата заезда:</label>
-              <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017"
-              class="map__item__option">
-            <button type="button" title="Поле для выбора">
-              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
-                <path fill="#cacaca"
-                  d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
-                <path fill="#cacaca"
-                  d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z" />
-              </svg>
-            </button>
-          </p>
-          <p class="map__item">
-            <label for="departure__date" class="map__item-residence">Дата выезда:</label>
-              <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017"
-              class="map__item__option">
-            <button type="button" title="Поле для выбора">
-              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
-                <path fill="#cacaca"
-                  d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
-                <path fill="#cacaca"
-                  d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z" />
-              </svg>
-            </button>
-          </p>
-          <p class="map__item people">
-            <label for="grown" class="map__item-resident">
-              Взрослые:
-            </label>
-            <button type="button" title="Минус">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
-                <path fill="#cacaca" d="M0 4h11v3H0z"></path>
-              </svg>
-            </button>
-            <input id="grown" type="text" name="grown" placeholder="2" class="number">
-            <button type="button" title="Плюс" class="map__item__button plus">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
-                <path fill="#cacaca" d="M0 4h11v3H0z"></path>
-                <path transform="matrix(0 -1 1 0 0 11)" class="st0" fill="#cacaca" d="M0 4h11v3H0z"></path>
-              </svg>
-            </button>
-          </p>
-          <p class="map__item people">
-            <label for="children" class="map__item-resident">
-              Дети:
-            </label>
-            <button type="button" title="Минус">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
-                <path fill="#cacaca" d="M0 4h11v3H0z"></path>
-              </svg>
-            </button>
-            <input id="children" type="text" name="children" placeholder="0" class="number">
-            <button type="button" title="Плюс" class="map__item__button plus">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
-                <path fill="#cacaca" d="M0 4h11v3H0z"></path>
-                <path transform="matrix(0 -1 1 0 0 11)" class="st0" fill="#cacaca" d="M0 4h11v3H0z"></path>
-              </svg>
-            </button>
-          </p>
-          <button class="button" type="submit">Найти</button>
-        </form>
+        <div class="map__image">
+          <form action="https://echo.htmlacademy.ru" class="map__form" method="post">
+            <p class="map__item">
+              <label for="arrival__date" class="map__item-residence">Дата заезда:</label>
+                <input id="arrival__date" type="text" name="arrival" placeholder="24 апреля 2017"
+                class="map__item__option">
+              <button type="button" title="Поле для выбора">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
+                  <path fill="#cacaca"
+                    d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
+                  <path fill="#cacaca"
+                    d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z" />
+                </svg>
+              </button>
+            </p>
+            <p class="map__item">
+              <label for="departure__date" class="map__item-residence">Дата выезда:</label>
+                <input id="departure__date" type="text" name="departure" placeholder="4 июля 2017"
+                class="map__item__option">
+              <button type="button" title="Поле для выбора">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
+                  <path fill="#cacaca"
+                    d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
+                  <path fill="#cacaca"
+                    d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z" />
+                </svg>
+              </button>
+            </p>
+            <p class="map__item people">
+              <label for="grown" class="map__item-resident">
+                Взрослые:
+              </label>
+              <button type="button" title="Минус">
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
+                  <path fill="#cacaca" d="M0 4h11v3H0z"></path>
+                </svg>
+              </button>
+              <input id="grown" type="text" name="grown" placeholder="2" class="number">
+              <button type="button" title="Плюс" class="map__item__button plus">
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
+                  <path fill="#cacaca" d="M0 4h11v3H0z"></path>
+                  <path transform="matrix(0 -1 1 0 0 11)" class="st0" fill="#cacaca" d="M0 4h11v3H0z"></path>
+                </svg>
+              </button>
+            </p>
+            <p class="map__item people">
+              <label for="children" class="map__item-resident">
+                Дети:
+              </label>
+              <button type="button" title="Минус">
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
+                  <path fill="#cacaca" d="M0 4h11v3H0z"></path>
+                </svg>
+              </button>
+              <input id="children" type="text" name="children" placeholder="0" class="number">
+              <button type="button" title="Плюс" class="map__item__button plus">
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11">
+                  <path fill="#cacaca" d="M0 4h11v3H0z"></path>
+                  <path transform="matrix(0 -1 1 0 0 11)" class="st0" fill="#cacaca" d="M0 4h11v3H0z"></path>
+                </svg>
+              </button>
+            </p>
+            <button class="button" type="submit">Найти</button>
+          </form>
+        </div>
       </section>
     </main>
     <footer class="main-footer">
