--- a/hotel.html
+++ b/hotel.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Отели</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet"
+    type="text/css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -33,22 +34,65 @@
       </nav>
     </header>
     <section class="services">
-      <!-- <form class="services-infrastructure">
-        <h2>Инфраструктура:</h2>
-        <input type="checkbox" name="subscribe" id="subscribe-field" checked>
-        <label for="subscribe-field">Бассейн</label>
-        <input type="checkbox">
-        <label for="subscribe-field">Парковка</label>
-        <input type="checkbox">
-        <label for="subscribe-field">WI-FI</label>
-        <h2>Тип жилья:</h2>
-        <input type="checkbox" checked>
-        <label for="subscribe-field">Гостиница</label>
-        <input type="checkbox" checked>
-        <label for="subscribe-field">Мотель</label>
-        <input type="checkbox" checked>
-        <label for="subscribe-field">Апартаменты</label>
-      </form> -->
+      <form class="services-infrastructure">
+        <div class="services-infrastructure__home">
+          <h2>Инфраструктура:</h2>
+
+            <label id="pool" class="checkbox-on">
+              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                <path fill="#FFFFFF"
+                  d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z" />
+                <path fill="#FFFFFF"
+                  d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
+              </svg>
+              <p>Бассейн</p>
+            </label>
+            <label id="parking" class="checkbox-off">
+              <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
+                <path fill="#FFFFFF"
+                  d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
+              </svg>
+              <p>Парковка</p>
+            </label>
+            <label id="Internet" class="checkbox-off">
+              <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
+                <path fill="#FFFFFF"
+                  d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
+              </svg>
+              <p>WI-FI</p>
+            </label>
+        </div>
+        <div class="services-infrastructure__home">
+          <h2>Тип жилья:</h2>
+            <label id="hotel" class="checkbox-on">
+              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                <path fill="#FFFFFF"
+                  d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z" />
+                <path fill="#FFFFFF"
+                  d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
+              </svg>
+              <p>Гостиница</p>
+            </label>
+            <label id="motel" class="checkbox-on">
+              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                <path fill="#FFFFFF"
+                  d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z" />
+                <path fill="#FFFFFF"
+                  d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
+              </svg>
+              <p>Мотель</p>
+            </label>
+            <label id="apartments" class="checkbox-on">
+              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                <path fill="#FFFFFF"
+                  d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z" />
+                <path fill="#FFFFFF"
+                  d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
+              </svg>
+              <p>Апартаменты</p>
+            </label>
+        </div>
+      </form>
       <div class="filter-range">
         <div class="filter-range-title">Стоимость в сутки (р):</div>
         <div class="price-controls">
